--- a/TweetLocations/en.lproj/iPad.storyboard
+++ b/TweetLocations/en.lproj/iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C2034" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="5">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -189,6 +189,14 @@ TWEET
                                     <action selector="infoButtonHit:" destination="4" eventType="touchUpInside" id="qVV-0Q-Ofd"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" text="pop-over label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="9" adjustsFontSizeToFit="NO" id="WI8-6Q-KZk">
+                                <rect key="frame" x="210" y="342" width="300" height="300"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.011764707043766975" green="0.14901961386203766" blue="0.9803922176361084" alpha="0.12" colorSpace="deviceRGB"/>
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -202,6 +210,7 @@ TWEET
                         <outlet property="detailDescriptionLabel" destination="27" id="29"/>
                         <outlet property="imageView" destination="4EC-4O-8JM" id="po0-7l-eli"/>
                         <outlet property="infoButton" destination="SlB-hm-qH4" id="9Lr-lv-QCz"/>
+                        <outlet property="labelOverEverything" destination="WI8-6Q-KZk" id="VUI-ie-rFJ"/>
                         <outlet property="mapView" destination="gmM-Pc-e95" id="DpE-zs-V1p"/>
                         <outlet property="picButton" destination="RvD-fd-Zut" id="mhD-In-UQv"/>
                         <outlet property="picCollection" destination="Zp6-Zw-f6B" id="UkJ-Np-M62"/>
