--- a/TweetLocations/en.lproj/iPhone.storyboard
+++ b/TweetLocations/en.lproj/iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C2034" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -269,6 +269,14 @@ TWEET
                                     <action selector="infoButtonHit:" destination="21" eventType="touchUpInside" id="2M1-UH-xtx"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" text="pop-over label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="9" adjustsFontSizeToFit="NO" id="yUQ-kp-dlY">
+                                <rect key="frame" x="10" y="58" width="300" height="300"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.011764707040000001" green="0.14901961389999999" blue="0.98039221759999995" alpha="0.12" colorSpace="deviceRGB"/>
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -281,6 +289,7 @@ TWEET
                         <outlet property="detailDescriptionLabel" destination="27" id="28"/>
                         <outlet property="imageView" destination="qhq-dD-J8q" id="BXV-DK-UW0"/>
                         <outlet property="infoButton" destination="hoi-sH-s9w" id="5dJ-UI-uCW"/>
+                        <outlet property="labelOverEverything" destination="yUQ-kp-dlY" id="azx-N8-maR"/>
                         <outlet property="mapView" destination="n2i-Vt-Kgm" id="lwq-QD-WfZ"/>
                         <outlet property="picButton" destination="Mbi-pB-gwe" id="R3A-xB-nMu"/>
                         <outlet property="picCollection" destination="lco-RX-G7U" id="SND-wV-PLQ"/>
