--- a/TweetLocations/en.lproj/iPad.storyboard
+++ b/TweetLocations/en.lproj/iPad.storyboard
@@ -132,6 +132,21 @@
                                     <action selector="videoButtonHit:" destination="4" eventType="touchUpInside" id="DRa-Xv-w9i"/>
                                 </connections>
                             </button>
+                            <button hidden="YES" opaque="NO" alpha="0.60000002384185791" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="RGE-JP-pxw">
+                                <rect key="frame" x="450" y="6" width="120" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Preview Video">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="previewVideoButtonHit:" destination="4" eventType="touchUpInside" id="h20-Bg-Ifw"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.5" contentMode="bottomLeft" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="9" id="Et5-xA-bXz">
                                 <rect key="frame" x="0.0" y="0.0" width="680" height="155"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -215,6 +230,7 @@ TWEET
                         <outlet property="mapView" destination="gmM-Pc-e95" id="DpE-zs-V1p"/>
                         <outlet property="picButton" destination="RvD-fd-Zut" id="mhD-In-UQv"/>
                         <outlet property="picCollection" destination="Zp6-Zw-f6B" id="UkJ-Np-M62"/>
+                        <outlet property="previewVideoButton" destination="RGE-JP-pxw" id="skL-nF-pUI"/>
                         <outlet property="scrollView" destination="wF8-3c-WHN" id="2lz-9m-nr1"/>
                         <outlet property="sizeButton" destination="0eb-rf-ck8" id="vfq-2Z-2K1"/>
                         <outlet property="textView" destination="gQY-2V-62v" id="4Iv-3C-HmT"/>
